# vimaj

./: CMakeLists.txt  README.md  main.cpp
godot/: Node2D.gd  Node2D.tscn
